apps/salesforce/force-app/main/default/objects/DocEngine_Template_Version__c/DocEngine_Template_Version__c.object-meta.xml
<CustomObject>
    <description>Immutable snapshot of a DocEngine template (JSON + mapping) at a given version number. Created on template save; documents pin a version.</description>
    <label>DocEngine Template Version</label>
    <nameField>
        <displayFormat>TV-{00000}</displayFormat>
        <label>Template Version Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocEngine Template Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>