apps/salesforce/force-app/main/default/objects/DocEngine_Template_Version__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <description>Parent DocEngine template. Master-Detail so versions share template sharing.</description>
    <label>Template</label>
    <referenceTo>DocEngine_Template__c</referenceTo>
    <relationshipLabel>Template Versions</relationshipLabel>
    <relationshipName>Template_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>