apps/salesforce/force-app/main/default/objects/DocEngine_Template_Version__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <description>Semantic version number within the parent template (1, 2, 3, …). Immutable after insert.</description>
    <label>Version</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>