apps/salesforce/force-app/main/default/objects/DocEngine_Template_Version__c/fields/Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Version_Key__c</fullName>
    <description>Unique key TemplateId_Version for find-or-create upserts (e.g. a0X…_3).</description>
    <externalId>true</externalId>
    <label>Version Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>